--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://localhost:27017
+MONGO_URI=mongodb+srv://aayushavm_db_user:hwVYKcQL2UpxiaKX@cluster0.kktkzky.mongodb.net/?appName=Cluster0
 JWT_SECRET=supersecuresecret123
