--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,19 @@
 {
-  "version": 2,
+  "version": 2,  // Specifies the Vercel configuration version.
   "builds": [
     {
-      "src": "server.js",
+      "src": "server.js", // Defines the entry point for the backend.
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/server.js"
+      "src": "/routes/(.*)", // Routes requests that start with '/routes' to index.js.
+      "dest": "server.js"
+    },
+    {
+      "src": "/(.*)", // Routes all other requests to index.js.
+      "dest": "server.js"
     }
   ]
 }
